# bike_share

./: .gitignore  LICENSE.md  README.md  Setup.md  env.yml  pyproject.toml  setup.py
bike_share/: data_cleaning_sol.py  data_loader.py  eval.py  utils.py
data/: README.md
entry_points/: README.md  compute_counts.py  load_data.py  station2name.py
notebooks/: README.md  bike_sharing_traintest.ipynb  cleaning_sol.ipynb  daily_counts.ipynb  data_analysis.ipynb  data_analysis_interactive.ipynb  eda.ipynb  howell_preproc.ipynb  id2name.ipynb  presentation_slides_german.html  presentation_slides_german.ipynb  presentation_slides_german.slides.html  presentation_verbose_german.ipynb
test/: README.md
